--- a/astro-2.tex
+++ b/astro-2.tex
@@ -32,8 +32,8 @@
 
 
 %\input{tex/main/01-introduction}
-\input{tex/main/02-background}
-%\input{tex/main/03-linear-perturbations}
+%\input{tex/main/02-background}
+\input{tex/main/03-linear-perturbations}
 %\input{tex/main/04-nonlinear-perturbations}
 %\input{tex/main/05-baryonic-structures}
 
